themes/pelican-cait/static/css/blog.css
body {
  color: #272822;
  background-color: #eeeeee;
  font-family: "Raleway", sans-serif; }

#sidebar {
  background: url("../img/stressed_linen/stressed_linen.png") repeat;
  position: fixed;
  left: 0;
  bottom: 0;
  right: auto;
  top: 0;
  width: 25%;
  min-width: 200px;
  padding-left: 8px;
  padding-right: 8px;
  color: #eeeeee; }
  #sidebar a {
    color: #eeeeee;
    text-decoration: none; }

#site-title {
  font-family: "Oswald", sans-serif;
  font-size: 2em;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  -ms-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s; }
  #site-title:hover {
    color: #38c5c5; }

#site-desc {
  font-size: 1.3em;
  padding: 0 6px; }

#post-container {
  position: relative;
  margin-left: 27%;
  max-width: 800px;
  overflow-wrap: break-word; }

#nav-links {
  list-style: none;
  padding: 0;
  font-family: "Oswald", sans-serif;
  font-size: 2em;
  font-variant: bold; }
  #nav-links li {
    margin: 12px 12px; }
  #nav-links a {
    padding: 0 24px;
    border-radius: 24px;
    display: inline-block;
    border: 3px solid #eeeeee;
    line-height: 1.8em;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s; }
  #nav-links a:hover {
    border-color: #38c5c5;
    color: #38c5c5; }

#post-list {
  list-style: none; }

.post-entry {
  margin: 3em 0; }

.entry-header {
  font-family: "Oswald", sans-serif;
  font-variant: bold; }
  .entry-header a {
    color: #272822;
    text-decoration: none; }
  .entry-header a:hover {
    color: #38c5c5;
    text-decoration: none; }
  .entry-header time {
    color: #8e927e; }
  .entry-header h1 {
    margin: 0.5em 0; }

.post-content a {
  color: #38c5c5; }
.post-content img {
  display: block;
  margin: 0 auto;
  max-width: 80%; }
.post-content blockquote {
  font-style: italic; }
.post-content pre {
  font-size: 13px;
  background-color: #e6e6e6;
  padding: 10px;
  margin: 10px;
  overflow: auto;
  font-family: "PT Mono", monospace;
}
blockquote.epigraph p {
    font-family: "Vollkorn";
    font-size: 22px;
}
blockquote p:not(.attribution):after {
    content: '”';
    font-size: 32px;
    font-family:Georgia, "Times New Roman", Times, serif;
    color: #134977;
    font-weight:bold;
    vertical-align:top;
    line-height:0.8
}
blockquote p:not(.attribution):before {
    content: '“';
    font-size: 32px;
    font-family:Georgia, "Times New Roman", Times, serif;
    color: #134977;
    font-weight:bold;
    vertical-align:top;
    line-height:0.8
}
blockquote p.attribution {
    font-weight:bold;
}
.post-meta a {
  font-style: italic;
  color: #38c5c5; }

.paginator {
  text-align: center;
  padding: 12px;
  font-size: 1.4em;
  font-family: "Oswald", sans-serif; }
  .paginator a {
    color: #272822;
    text-decoration: none; }
    .paginator a:hover {
      color: #38c5c5; }

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   Theses examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */
@media only screen and (max-width: 800px) {
  /* Style adjustments for viewports that meet the condition */
  #sidebar {
    position: static;
    width: 100%;
    padding: 0; }

  #post-container {
    width: 100%;
    position: static;
    margin: 0;
    padding: 0px; }

  #post-list {
    padding: 0; }

  #nav-links {
    text-align: center;
    padding: 0;
    font-size: 1.8em; }
    #nav-links li {
      display: inline;
      margin-top: 6px; }
    #nav-links a {
      display: inline-block; }

  #site-title h1 {
    margin-top: 0; }

  #site-header {
    margin-left: 18px; }

  .side-shadow {
    -webkit-box-shadow: 0 3px 12px 3px #8e927e;
    -moz-box-shadow: 0 3px 12px 3px #8e927e;
    box-shadow: 0 3px 12px 3px #8e927e; }

  .post-entry {
    padding: 0 12px; } }
@media only screen and (max-width: 640px) {
  #nav-links {
    font-size: 1.1em; }

  #site-desc {
    font-size: 1em; }

  #site-title h1 {
    font-size: 1.3em;
    margin: 0.1em 0px; }

  #site-info {
    font-size: 0.6em; } }

.icon-large {
  padding:10px;
  font-size:200%;
}

